--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <h1> Header 1 </h1>
     <img src=https://avatars3.githubusercontent.com/u/21285656?v=4>
 Hello there, awesome person!
+    <ol>
+      <li> Ordered </li>
+      <li> List </li>
+      <li> Yay! </li>
+    </ol>
   </body>
 </html>
