--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <img src=https://avatars3.githubusercontent.com/u/21285656?v=4>
 Hello there, awesome person!
     <ol>
-      <li> Ordered </li>
-      <li> List </li>
-      <li> Yay! </li>
+      <li><a href="https://github.com">This is a link to GitHub!</a></li>
+      <li><a href="https://github.com">This is another link to GitHub!</a></li>
+      <li><a href="https://github.com">This is yet another link to GitHub!</a></li>
     </ol>
   </body>
 </html>
